stryker/Metadata/unpackaged/objects/Salary__c.object
<CustomObject>
    <fields>
        <fullName>Basic_Salary__c</fullName>
        <label>Basic Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employ_Id__c</fullName>
        <label>Employ Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Allowance__c</fullName>
        <label>Other Allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Salary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>